# piast-gate

./: .env.example  .env.sample  .gitignore  README.md  main.py  presidio_config.json  pyproject.toml  requirements.txt
api/: main.py  routers.py
api/config/: auth.py  config.py  limiter.py  logging_config.py
api/di/: chat_container.py  detector_container.py  document_container.py
api/middleware/: error_handler.py
application/: dtos.py  use_cases.py
application/dtos/: anonymize_request.py  anonymize_response.py  chat_request.py  chat_response.py  stream_chat_chunk.py
application/helpers/: stream_helper.py
application/services/: stream_deanonymizer.py  thinking_parser.py
application/use_cases/: anonymize_document_use_case.py  anonymize_use_case.py  chat_use_case.py  stream_chat_use_case.py
domain/: entities.py  interfaces.py  services.py
domain/entities/: message.py  pii_token.py
domain/enums/: pii_type.py
domain/interfaces/: document_processor.py  document_processor_factory.py  llm_provider.py  pii_detector.py
domain/services/: anonymizer_service.py
infrastructure/api/: main.py  routers.py
infrastructure/detectors/: bank_account_detector.py  email_detector.py  pesel_detector.py  phone_detector.py  presidio_detector.py  regex_detector.py  spacy_detector.py
infrastructure/document_processors/: docx_processor.py  pdf_processor.py
infrastructure/factories/: llm_factory.py  processor_factory.py
infrastructure/llm/: gemini_llm.py  llm_factory.py  mock_llm.py
tests/: test_anonymizer_extended.py  test_domain.py  test_gemini.py  test_gemini_integration.py  test_integration.py
tests/e2e/: conftest.py  test_chat.py  (+2 more)
(+12 files in other folders)
