[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "piast-gate"
version = "0.1.0"
description = "Privacy-first LLM gateway — anonymize PII before it leaves your system."
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi==0.128.0",
    "google-genai==1.56.0",
    "phonenumbers==9.0.21",
    "pl_core_news_lg @ https://github.com/explosion/spacy-models/releases/download/pl_core_news_lg-3.8.0/pl_core_news_lg-3.8.0-py3-none-any.whl#sha256=3bc7296cd4d67fa9ee0904b25401b0e9a9a772d5c4756edf54143a2ff4c9dcc0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "python-docx==1.2.0",
    "python-dotenv==1.2.1",
    "slowapi==0.1.9",
    "spacy==3.8.11",
    "uvicorn==0.40.0",
    "python-multipart==0.0.22",
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest-cov",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I"]
ignore = []

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "domain*", "application*", "infrastructure*"]
